# Restaurant-Ordering-System

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  RestaurantOrderingSystem  cmake_install.cmake  mainwindow.cpp  mainwindow.cpp.save  mainwindow.h  mainwindow.ui
RestaurantOrderingSystem/: CMakeCache.txt  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
RestaurantOrderingSystem_autogen/: deps  moc_predefs.h
RestaurantOrderingSystem_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
server/: server  server.cpp
server/client/: client  client.cpp
tests/: test_basic.cpp  test_edge_cases.cpp  test_json.cpp  test_network_mock.cpp
